--- a/src/style.scss
+++ b/src/style.scss
@@ -1,43 +1,39 @@
 .wrapp-fixed-table {
-  max-width: 400px;
-  max-height: 150px;
+  max-width: 100%;
+  max-height: 100%;
   overflow: scroll;
+  border: 1px solid #808080;
 
   thead th {
     position: -webkit-sticky; /* for Safari */
     position: sticky;
     top: 0;
-  }
-
-  tbody th {
-    position: -webkit-sticky; /* for Safari */
-    position: sticky;
-    left: 0;
-  }
-
-
-  /* To have the header in the first column stick to the left: */
-
-  thead th:first-child {
-    left: 0;
-    z-index: 2;
-  }
-
-
-  /* Just to display it nicely: */
-
-  thead th {
-    background: #000;
-    color: #FFF;
-    /* Ensure this stays above the emulated border right in tbody th {}: */
-    z-index: 1;
-  }
-
-  tbody th {
     background: #FFF;
-    border-right: 1px solid #CCC;
-    /* Browsers tend to drop borders on sticky elements, so we emulate the border-right using a box-shadow to ensure it stays: */
-    box-shadow: 1px 0 0 0 #ccc;
+    z-index: 1;
+
+    &:first-child {
+      left: 0;
+      z-index: 2;
+    }
+    &:nth-child(2) {
+      border-left: 1px solid #CCC;
+    }
+  }
+
+  tbody {
+    th {
+      position: -webkit-sticky; /* for Safari */
+      position: sticky;
+      left: 0;
+      background: #FFF;
+      box-shadow: 1px 0 0 0 #ccc;
+    }
+    td {
+      border: 1px solid #CCC;
+      &:last-child {
+        border-right: none;
+      }
+    }
   }
 
   table {
